Delphi/Lib/XCGUI.pas

function XRichEdit_InsertGif (hEle:Integer;hImage:Integer;pImagePath:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_InsertStringEx (hEle:Integer;iRow:Integer;iColumn:Integer;pString:PWideChar;pFont:TLOGFONTW;color:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_InsertImageEx (hEle:Integer;iRow:Integer;iColumn:Integer;hImage:Integer;pImagePath:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_InsertGifEx (hEle:Integer;iRow:Integer;iColumn:Integer;hImage:Integer;pImagePath:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableReadOnly (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableMultiLine (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnablePassword (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableEvent_XE_RICHEDIT_CHANGE (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableAutoWrap (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableAutoCancelSel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_EnableAutoSelAll (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_SetText (hEle:Integer;pString:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_SetTextInt (hEle:Integer;nVaule:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_GetText (hEle:Integer;pOut:PWideChar;len:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_GetHTMLFormat (hEle:Integer;pOut:PWideChar;len:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_GetData (hEle:Integer;pDataSize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XRichEdit_InsertData (hEle:Integer;pData:Integer;iRow:Integer;iColumn:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_GetTextLength (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_SetRowHeight (hEle:Integer;nHeight:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_GetCurrentRow (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XRichEdit_GetCurrentColumn (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_SetCurrentPos (hEle:Integer;iRow:Integer;iColumn:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_GetRowCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XRichEdit_GetRowLength (hEle:Integer;iRow:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XRichEdit_GetSelectText (hEle:Integer;pOut:PWideChar;len:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XRichEdit_GetSelectPosition (hEle:Integer;pBegin:TPosition;pEnd:TPosition) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_SetSelect (hEle:Integer;iStartRow:Integer;iStartCol:Integer;iEndRow:Integer;iEndCol:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_SetItemFontEx (hEle:Integer;beginRow:Integer;beginColumn:Integer;endRow:Integer;endColumn:Integer;pFont:TLOGFONTW) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_SetItemColorEx (hEle:Integer;beginRow:Integer;beginColumn:Integer;endRow:Integer;endColumn:Integer;color:Integer;alpha:Byte) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_CancelSelect (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XRichEdit_SetSelectBkColor (hEle:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XRichEdit_IsEmpty (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_SelectAll (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_DeleteSelect (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XRichEdit_DeleteAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XRichEdit_ClipboardCut (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_ClipboardCopy (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XRichEdit_ClipboardPaste (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSBar_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XSBar_SetRange (hEle:Integer;range:Integer);stdcall;far; external 'xcgui.dll';
function XSBar_GetRange (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XSBar_ShowButton (hEle:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
procedure XSBar_SetSliderLength (hEle:Integer;length:Integer);stdcall;far; external 'xcgui.dll';
procedure XSBar_SetSliderMinLength (hEle:Integer;minLength:Integer);stdcall;far; external 'xcgui.dll';
function XSBar_SetHorizon (hEle:Integer;bHorizon:LongBool) : LongBool;stdcall;far; external 'xcgui.dll';
function XSBar_GetSliderMaxLength (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSBar_ScrollUp (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSBar_ScrollDown (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSBar_ScrollTop (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSBar_ScrollBottom (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSBar_ScrollPos (hEle:Integer;pos:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSBar_GetButtonUp (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSBar_GetButtonDown (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSBar_GetButtonSlider (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSView_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSView_SetTotalSize (hEle:Integer;cx:Integer;cy:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XSView_GetTotalSize (hEle:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
function XSView_SetLineSize (hEle:Integer;nWidth:Integer;nHeight:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XSView_GetLineSize (hEle:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
function XSView_GetViewPosH (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSView_GetViewPosV (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSView_GetViewWidth (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSView_GetViewHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XSView_GetViewRect (hEle:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
function XSView_GetScrollBarH (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XSView_GetScrollBarV (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XSView_SetPadding (hEle:Integer;left:Integer;top:Integer;right:Integer;bottom:Integer);stdcall;far; external 'xcgui.dll';
procedure XSView_GetPadding (hEle:Integer;pPadding:TPaddingSize_);stdcall;far; external 'xcgui.dll';
function XSView_ScrollPosH (hEle:Integer;pos:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollPosV (hEle:Integer;pos:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollPosXH (hEle:Integer;posX:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollPosYV (hEle:Integer;posY:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XSView_ShowSBarH (hEle:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
procedure XSView_ShowSBarV (hEle:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
procedure XSView_EnableAutoShowScrollBar (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XSView_ScrollLeftLine (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollRightLine (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollTopLine (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollBottomLine (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollLeft (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollRight (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollTop (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XSView_ScrollBottom (hEle:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XShape_GetParentEle (hShape:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XShape_GetParentLayout (hShape:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XShape_GetHWINDOW (hShape:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XShape_GetParent (hShape:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XShape_SetID (hShape:Integer;nID:Integer);stdcall;far; external 'xcgui.dll';
function XShape_GetID (hShape:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XShape_Redraw (hShape:Integer);stdcall;far; external 'xcgui.dll';
function XShape_GetWidth (hShape:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XShape_GetHeight (hShape:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XShape_GetRect (hShape:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XShape_SetRect (hShape:Integer;pRect:TRECT);stdcall;far; external 'xcgui.dll';
procedure XShape_GetContentSize (hShape:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
procedure XShape_ShowLayout (hShape:Integer;bShow:LongBool);stdcall;far; external 'xcgui.dll';
procedure XShape_AdjustLayout (hShape:Integer);stdcall;far; external 'xcgui.dll';
procedure XShape_Destroy (hShape:Integer);stdcall;far; external 'xcgui.dll';
function XShapeText_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;pName:PWideChar;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XShapeText_SetText (hTextBlock:Integer;pName:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XShapeText_GetText (hTextBlock:Integer;pOut:PWideChar;nOutLen:Integer);stdcall;far; external 'xcgui.dll';
function XShapeText_GetTextLength (hTextBlock:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XShapeText_SetFont (hTextBlock:Integer;hFontx:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapeText_SetTextColor (hTextBlock:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
function XShapeText_GetTextColor (hTextBlock:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XShapeText_SetTextAlign (hTextBlock:Integer;align:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapeText_SetOffset (hTextBlock:Integer;x:Integer;y:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapeText_SetLayoutWidth (hTextBlock:Integer;nType:Integer;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapeText_SetLayoutHeight (hTextBlock:Integer;nType:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapeText_GetLayoutWidth (hTextBlock:Integer;pType:Integer;pWidth:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapeText_GetLayoutHeight (hTextBlock:Integer;pType:Integer;pHeight:Integer);stdcall;far; external 'xcgui.dll';
function XShapePic_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XShapePic_SetImage (hShape:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapePic_SetLayoutWidth (hShape:Integer;nType:Integer;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapePic_SetLayoutHeight (hShape:Integer;nType:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
procedure XShapePic_GetLayoutWidth (hShape:Integer;pType:Integer;pWidth:Integer);stdcall;far; external 'xcgui.dll';
